--- a/hackathon/MK/Fragmented_autoTrace/FragTracer_Resource.qrc
+++ b/hackathon/MK/Fragmented_autoTrace/FragTracer_Resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/segEditingIcons">
+    <file>resources/segment_editing/remove.png</file>
     <file>resources/segment_editing/redo.png</file>
     <file>resources/segment_editing/undo.png</file>
   </qresource>
