--- a/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
+++ b/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
@@ -12,7 +12,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>887</width>
+    <width>865</width>
     <height>768</height>
    </rect>
   </property>
@@ -273,7 +273,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>813</width>
+               <width>791</width>
                <height>452</height>
               </rect>
              </property>
@@ -479,6 +479,9 @@
                    <layout class="QHBoxLayout" name="horizontalLayout_10">
                     <item>
                      <widget class="QCheckBox" name="checkBox_6">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="font">
                        <font>
                         <weight>50</weight>
@@ -487,6 +490,22 @@
                       </property>
                       <property name="text">
                        <string>Gamma correction</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
+                      <property name="font">
+                       <font>
+                        <weight>50</weight>
+                        <bold>false</bold>
+                       </font>
+                      </property>
+                      <property name="text">
+                       <string>(Not ready for use now)</string>
                       </property>
                      </widget>
                     </item>
@@ -635,7 +654,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>813</width>
+               <width>791</width>
                <height>452</height>
               </rect>
              </property>
@@ -803,7 +822,7 @@
                         <rect>
                          <x>0</x>
                          <y>0</y>
-                         <width>440</width>
+                         <width>434</width>
                          <height>178</height>
                         </rect>
                        </property>
@@ -821,6 +840,9 @@
                           <property name="text">
                            <string>Trace dendritic areas with somas labeled by markers</string>
                           </property>
+                          <property name="autoExclusive">
+                           <bool>false</bool>
+                          </property>
                          </widget>
                         </item>
                         <item>
@@ -835,6 +857,9 @@
                           </property>
                           <property name="text">
                            <string>Extended axon tracing with marker-indicated segments</string>
+                          </property>
+                          <property name="autoExclusive">
+                           <bool>false</bool>
                           </property>
                          </widget>
                         </item>
@@ -920,7 +945,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>813</width>
+               <width>808</width>
                <height>452</height>
               </rect>
              </property>
@@ -1095,7 +1120,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>813</width>
+               <width>808</width>
                <height>452</height>
               </rect>
              </property>
@@ -1328,6 +1353,9 @@
                   </size>
                  </property>
                  <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                 <property name="checked">
                   <bool>true</bool>
                  </property>
                 </widget>
@@ -1599,22 +1627,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>radioButton_5</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>FragmentedTraceUI</receiver>
-   <slot>refreshSomaCoords()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>769</x>
-     <y>434</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>845</x>
-     <y>247</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>checkBox_2</sender>
    <signal>toggled(bool)</signal>
    <receiver>FragmentedTraceUI</receiver>
@@ -1678,6 +1690,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>radioButton_5</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>FragmentedTraceUI</receiver>
+   <slot>markerMonitorOption(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>654</x>
+     <y>423</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>887</x>
+     <y>270</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radioButton_6</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>FragmentedTraceUI</receiver>
+   <slot>markerMonitorOption(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>789</x>
+     <y>455</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>882</x>
+     <y>438</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>saveSettingsClicked()</slot>
@@ -1693,5 +1737,6 @@
   <slot>markerFunctionToggled(bool)</slot>
   <slot>connectButtonClicked()</slot>
   <slot>sequentialTypeChangingToggled(bool)</slot>
+  <slot>markerMonitorOption(bool)</slot>
  </slots>
 </ui>
