--- a/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
+++ b/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
@@ -846,24 +846,6 @@
                          </widget>
                         </item>
                         <item>
-                         <widget class="QRadioButton" name="radioButton_6">
-                          <property name="font">
-                           <font>
-                            <family>Calibri</family>
-                            <pointsize>10</pointsize>
-                            <weight>50</weight>
-                            <bold>false</bold>
-                           </font>
-                          </property>
-                          <property name="text">
-                           <string>Extended axon tracing with marker-indicated segments</string>
-                          </property>
-                          <property name="autoExclusive">
-                           <bool>false</bool>
-                          </property>
-                         </widget>
-                        </item>
-                        <item>
                          <spacer name="verticalSpacer_3">
                           <property name="orientation">
                            <enum>Qt::Vertical</enum>
@@ -945,7 +927,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>808</width>
+               <width>791</width>
                <height>452</height>
               </rect>
              </property>
@@ -1046,7 +1028,7 @@
                  </size>
                 </property>
                 <property name="title">
-                 <string>Continuous Axon Tracing</string>
+                 <string>Extended Axon Tracing</string>
                 </property>
                 <property name="checkable">
                  <bool>true</bool>
@@ -1120,7 +1102,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>808</width>
+               <width>791</width>
                <height>452</height>
               </rect>
              </property>
@@ -1227,7 +1209,7 @@
                     <cursorShape>ArrowCursor</cursorShape>
                    </property>
                    <property name="toolTip">
-                    <string>Erase</string>
+                    <string>Erase (Shift+E)</string>
                    </property>
                    <property name="styleSheet">
                     <string notr="true">QPushButton:checked{background-color: rgb(120, 120, 120);}</string>
@@ -1262,7 +1244,7 @@
                     <cursorShape>ArrowCursor</cursorShape>
                    </property>
                    <property name="toolTip">
-                    <string>Connect</string>
+                    <string>Connect (Shift+C)</string>
                    </property>
                    <property name="styleSheet">
                     <string notr="true">QPushButton:checked{background-color: rgb(120, 120, 120);}</string>
@@ -1278,6 +1260,38 @@
                     <size>
                      <width>33</width>
                      <height>33</height>
+                    </size>
+                   </property>
+                   <property name="checkable">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="pushButton_4">
+                   <property name="maximumSize">
+                    <size>
+                     <width>40</width>
+                     <height>40</height>
+                    </size>
+                   </property>
+                   <property name="toolTip">
+                    <string>Show/hide type-16 segments (F1)</string>
+                   </property>
+                   <property name="styleSheet">
+                    <string notr="true">QPushButton:checked{background-color: rgb(120, 120, 120);}</string>
+                   </property>
+                   <property name="text">
+                    <string/>
+                   </property>
+                   <property name="icon">
+                    <iconset resource="FragTracer_Resource.qrc">
+                     <normaloff>:/segEditingIcons/resources/segment_editing/show_hide.png</normaloff>:/segEditingIcons/resources/segment_editing/show_hide.png</iconset>
+                   </property>
+                   <property name="iconSize">
+                    <size>
+                     <width>38</width>
+                     <height>38</height>
                     </size>
                    </property>
                    <property name="checkable">
@@ -1309,6 +1323,12 @@
                   <height>100</height>
                  </size>
                 </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>100</height>
+                 </size>
+                </property>
                 <property name="title">
                  <string>Segment Editing Preferences</string>
                 </property>
@@ -1316,7 +1336,7 @@
                  <property name="geometry">
                   <rect>
                    <x>10</x>
-                   <y>30</y>
+                   <y>40</y>
                    <width>40</width>
                    <height>40</height>
                   </rect>
@@ -1489,7 +1509,7 @@
    <slot>saveSettingsClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>698</x>
+     <x>676</x>
      <y>733</y>
     </hint>
     <hint type="destinationlabel">
@@ -1505,7 +1525,7 @@
    <slot>traceButtonClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>775</x>
+     <x>753</x>
      <y>733</y>
     </hint>
     <hint type="destinationlabel">
@@ -1521,7 +1541,7 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>852</x>
+     <x>830</x>
      <y>733</y>
     </hint>
     <hint type="destinationlabel">
@@ -1601,8 +1621,8 @@
    <slot>refreshSomaCoords()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>792</x>
-     <y>629</y>
+     <x>791</x>
+     <y>637</y>
     </hint>
     <hint type="destinationlabel">
      <x>796</x>
@@ -1707,18 +1727,18 @@
    </hints>
   </connection>
   <connection>
-   <sender>radioButton_6</sender>
-   <signal>toggled(bool)</signal>
+   <sender>pushButton_4</sender>
+   <signal>clicked(bool)</signal>
    <receiver>FragmentedTraceUI</receiver>
-   <slot>markerMonitorOption(bool)</slot>
+   <slot>showHideButtonClicked(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>789</x>
-     <y>455</y>
+     <x>269</x>
+     <y>299</y>
     </hint>
     <hint type="destinationlabel">
-     <x>882</x>
-     <y>438</y>
+     <x>864</x>
+     <y>232</y>
     </hint>
    </hints>
   </connection>
@@ -1738,5 +1758,6 @@
   <slot>connectButtonClicked()</slot>
   <slot>sequentialTypeChangingToggled(bool)</slot>
   <slot>markerMonitorOption(bool)</slot>
+  <slot>showHideButtonClicked(bool)</slot>
  </slots>
 </ui>
